css changes in surya to doc

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2410,14 +2410,14 @@
 
 
                         <div id="Organization"  class="page-section">
-                          <h3><span class="numbers">4.8</span> Organization</h3>
+                          <h3><span class="numbers">4.8</span> <span style="margin-left:10px;">Organization</span></h3>
                           <p>Only the admin will have access to create an organization. To create an organization, navigate to Account Management and from the Account Management drop-down, select the ORGANIZATION tab. On the Organization screen, click on the “ADD” button to create a new organization.</p>
                           <img src="{{ '/assets/images/doc-img102.png' | relative_url }}"alt="image" class="topImg" style="width:400px;border:1px solid green; margin-left:25%;margin-top:10px;margin-bottom:10px;">
                           <p style="text-align:center;"><strong>Figure: Worker RDP details </strong></p>
                         </div>
 
                         <div id="Notifications"  class="page-section">
-                          <h3><span class="numbers">4.10</span> Notifications</h3>
+                          <h3><span class="numbers">4.10</span><span style="margin-left:10px;">Notifications</span></h3>
                           <p>Notifications feature displays all the notifications related to the account.</p>
                           <img src="{{ '/assets/images/doc-img107.png' | relative_url }}"alt="image" class="topImg" style="width:400px;border:1px solid green; margin-left:25%;margin-top:10px;margin-bottom:10px;">
                           <p style="text-align:center;"><strong>Figure: Worker RDP details </strong></p>
