css changes in hardware

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -756,7 +756,7 @@
                                            <li><a class="child  4" href="#Software"><span class="numbers">5.1.1</span>Software Requirements</a>
                                            <li><a class="child  4" href="#Hardware"><span class="numbers">5.1.2</span>Hardware Requirements</a>
                                              <li><a class="child  4" href="#Instructions"><span class="numbers">5.1.3</span>Installation Instructions</a>
-                                            <li><a class="child  4" href="#TechforceOCR"><span class="numbers">5.1.4</span>Installing TechforceOCR</a>
+                                            <li><a class="child  4" href="#InstallingTechforceOCR2"><span class="numbers">5.1.4</span>Installing TechforceOCR</a>
                                               <li><a class="child  4" href="#Uninstall"><span class="numbers">5.1.5</span>Uninstall Instructions</a>
                                          </ul>
                                     </li>
@@ -2241,24 +2241,7 @@
                               <p style="text-align:center;"><strong>Figure: Verification Process </strong></p>
                               <p><span class="numbers">5.</span>Once you're done with the verifiation process you will be redirected to the eManager -Console homepage page.</p>
 
-                              <h5>Worker creation:</h5>
-                              <p>1.This is the worker screen before a worker is created in Worker management.</p>
-                               <img src="{{ '/assets/images/doc-img81.png' | relative_url }}"alt="image" class="topImg" style="width:400px;border:1px solid green; margin-left:25%;margin-top:10px;margin-bottom:10px;">
-                               <p style="text-align:center;"><strong>Figure: Worker RDP details </strong></p>
-                              <p><span class="numbers">2.</span>To create a worker, open the Techforce.ai studio, which will create an icon in the task tray. Open the task tray, Right-click on the studio icon.Click on settings and register.The following screen displays.</p>
-                              <img src="{{ '/assets/images/doc-img82.png' | relative_url }}"alt="image" class="topImg" style="width:400px;border:1px solid green; margin-left:25%;margin-top:10px;margin-bottom:10px;">
-                                <p style="text-align:center;"><strong>Figure: Worker RDP details </strong></p>
-                              <p><span class="numbers">3.</span>Enter the details and click on SUBMIT. A message confirming successful submission will appear.This creates the worker.  After creating the worker the details of the worker like name, host and so on can be seen and the worker RDP details will be sent via an email.</p>
-                              <p><span class="numbers">4.</span>The  following image shows the screen of the worker created, also the details of the created worker can be seen</p>
-                              <img src="{{ '/assets/images/doc-img83.png' | relative_url }}"alt="image" class="topImg" style="width:400px;border:1px solid green; margin-left:25%;margin-top:10px;margin-bottom:10px;">
-                              <p style="text-align:center;"><strong>Figure: Worker RDP details </strong></p>
-                               <h5>Delete Worker</h5>
-                              <p><span class="numbers">1.</span>To delete a worker created earlier, just click on the DELETE icon which is available in the details of the worker.</p>
-                              <img src="{{ '/assets/images/doc-img84.png' | relative_url }}"alt="image" class="topImg" style="width:400px;border:1px solid green; margin-left:25%;margin-top:10px;margin-bottom:10px;">
-                               <p style="text-align:center;"><strong>Figure: Worker RDP details </strong></p>
-                              <p><span class="numbers">2.</span>On the next screen, click on YES to confirm the deletion of the worker on the machine.</p>
-                              <img src="{{ '/assets/images/doc-img85.png' | relative_url }}"alt="image" class="topImg" style="width:400px;border:1px solid green; margin-left:25%;margin-top:10px;margin-bottom:10px;">
-                               <p style="text-align:center;"><strong>Figure: Worker RDP details </strong></p>
+
                            </div>
 
                            <div id="Login"  class="page-section">
@@ -2316,6 +2299,24 @@
                             <h5>Reserved:</h5>
                             <p>2.If a worker is created as “Reserved” then the flows/business processes can be executed only on that machine.</p>
 
+                            <h5>Worker creation:</h5>
+                            <p>1.This is the worker screen before a worker is created in Worker management.</p>
+                             <img src="{{ '/assets/images/doc-img81.png' | relative_url }}"alt="image" class="topImg" style="width:400px;border:1px solid green; margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                             <p style="text-align:center;"><strong>Figure: Worker RDP details </strong></p>
+                            <p><span class="numbers">2.</span>To create a worker, open the Techforce.ai studio, which will create an icon in the task tray. Open the task tray, Right-click on the studio icon.Click on settings and register.The following screen displays.</p>
+                            <img src="{{ '/assets/images/doc-img82.png' | relative_url }}"alt="image" class="topImg" style="width:400px;border:1px solid green; margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                              <p style="text-align:center;"><strong>Figure: Worker RDP details </strong></p>
+                            <p><span class="numbers">3.</span>Enter the details and click on SUBMIT. A message confirming successful submission will appear.This creates the worker.  After creating the worker the details of the worker like name, host and so on can be seen and the worker RDP details will be sent via an email.</p>
+                            <p><span class="numbers">4.</span>The  following image shows the screen of the worker created, also the details of the created worker can be seen</p>
+                            <img src="{{ '/assets/images/doc-img83.png' | relative_url }}"alt="image" class="topImg" style="width:400px;border:1px solid green; margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                            <p style="text-align:center;"><strong>Figure: Worker RDP details </strong></p>
+                             <h5>Delete Worker</h5>
+                            <p><span class="numbers">1.</span>To delete a worker created earlier, just click on the DELETE icon which is available in the details of the worker.</p>
+                            <img src="{{ '/assets/images/doc-img84.png' | relative_url }}"alt="image" class="topImg" style="width:400px;border:1px solid green; margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                             <p style="text-align:center;"><strong>Figure: Worker RDP details </strong></p>
+                            <p><span class="numbers">2.</span>On the next screen, click on YES to confirm the deletion of the worker on the machine.</p>
+                            <img src="{{ '/assets/images/doc-img85.png' | relative_url }}"alt="image" class="topImg" style="width:400px;border:1px solid green; margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                             <p style="text-align:center;"><strong>Figure: Worker RDP details </strong></p>
                          </div>
 
                          <div id="Queues"  class="page-section">
@@ -2474,7 +2475,7 @@
                              <p>Refer 3.1.3</p>
                          </div>
 
-                         <div id="TechforceOCR"  class="page-section">
+                         <div id="InstallingTechforceOCR2"  class="page-section">
                              <h4 class="purple"><span class="numbers">5.1.4</span> Installing Techforce OCR</h4>
                              <p>Refer 3.1.4</p>
                          </div>
