css changes in doc tosurya

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -767,7 +767,7 @@
                                     <li><a class="child 3" href="#SecretVault"><span class="numbers">4.6</span> Secret Vault</a></li>
                                     <li><a class="child 3" href="#Schedules"><span class="numbers">4.7</span> Schedules</a></li>
                                     <li><a class="child 3" href="#Organization"><span class="numbers">4.8</span> Organization</a></li>
-                                    <li><a class="child 3" href="#AccountSettings"><span class="numbers">4.9</span> Account Settings</a></li>
+                                    <li><a class="child 3" href="#ProfileSettings"><span class="numbers">4.9</span> Profile Settings</a></li>
                                     <li><a class="child 3" href="#Notifications"><span class="numbers">4.10</span> Notifications</a></li>
                                 </ul>
                             </li>
@@ -800,7 +800,7 @@
                                        <li><a class="child 5" href="#SaaSModel"><span class="numbers">7.1</span>SaaS Model</a></li>
                                        <li><a class="child 5" href="#HybridModel"><span class="numbers">7.2</span>Hybrid Model</a></li>
                                        <li><a class="child 5" href="#OnPremise"><span class="numbers">7.3</span>On-Premise Model</a></li>
-                                       <li><a class="child 5" href="DeploymentArchitecture"><span class="numbers">7.</span>Deployment Architecture</a></li>
+                                       <!-- <li><a class="child 5" href="DeploymentArchitecture"><span class="numbers">7.</span>Deployment Architecture</a></li> -->
                                        <li><a class="child 5" href="#SecurityArchitecture"><span class="numbers">7.4</span>Security Architecture</a></li>
                                    </ul>
                                 </li>
@@ -2442,6 +2442,12 @@
                               <p style="text-align:center;"><strong>Figure: Worker RDP details </strong></p>
                             </div>
 
+                            <div id="ProfileSettings"  class="page-section">
+                              <h3><span class="numbers">4.9</span> <span style="margin-left:20px;">ProfileSettings</span></h3>
+                              <p>Profile details are created when a user logs in for the first time. Those details can be updated in Account Management.</p>
+                              <img src="{{ '/assets/images/doc-img103.png' | relative_url }}"alt="image" class="topImg" style="width:400px;border:1px solid green; margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                            </div>
+
                             <div id="Notifications"  class="page-section">
                               <h3><span class="numbers">4.10</span><span style="margin-left:30px;">Notifications</span></h3>
                               <p>Notifications feature displays all the notifications related to the account.</p>
@@ -2704,7 +2710,7 @@
 
                               </div>
                               <div id="OnPremise" class="page-section">
-                                <h3><span class="numbers">7.3</span> On Premise</h3>
+                                <h3><span class="numbers">7.3</span><span style="margin-left:20px;"> On-Premise</span></h3>
                                   <img src="{{ '/assets/images/doc-img89.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
                               </div>
 
