changes in doc to surya pavan

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -997,14 +997,14 @@
                                      <p style="text-align:center;"><strong>Figure: Read Action</strong></p>
                                    <p>Pass the XPath of which you want to read into the HTML element and create a variable in the variable window and pass the variable name in the Read to variable.</p>
                                  <img src="{{ '/assets/images/doc-img99.png' | relative_url }}" alt="image" style="width:800px;border:1px solid green;margin-left:5%;margin-top:10px;margin-bottom:10px;">
-                                   <p style="text-align:center;"><strong>Figure: Read to Variable Action </strong></p>
+                                   <p style="text-align:center;"><strong>Figure:  Variable Panel - Create Variable </strong></p>
                                    <li><span class="numbers"> <strong>	Step 8: </strong></span> Drag and drop the echo action  into the flow.</li>
                                  <img src="{{ '/assets/images/doc-img100.png' | relative_url }}" alt="image" style="width:800px;border:1px solid green;margin-left:5%;margin-top:10px;margin-bottom:10px;">
                                    <p style="text-align:center;"><strong>Figure: Echo Action </strong></p>
                                   <p>Pass the variable name created to store the read value from the webpage in the Write your custom Variable.</p>
                                   <p>Echo will show the results in the logs.</p>
                                  <img src="{{ '/assets/images/doc-img101.png' | relative_url }}" alt="image" style="width:800px;border:1px solid green;margin-left:5%;margin-top:10px;margin-bottom:10px;">
-                                    <p style="text-align:center;"><strong>Figure: Logs Action</strong></p>
+                                    <p style="text-align:center;"><strong>Figure: Logs Panel</strong></p>
                                   <li><span class="numbers"><strong>	Step 9: </strong></span> Now save the flow by clicking Save and run the flow by clicking the Play button in the menu bar.</li>
                               </div>
 
