--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -557,8 +557,8 @@
                            <li class="subMenu">
                                 <a href="#Techforce"  class="heading"><span class="numbers">3.</span>Techforce.ai Studio Guide</a>
                                 <ul class="collapse list-unstyled collapse-2">
-                                    <li><a class="child 2" href="#Installation"><span class="numbers"></span>Installation</a>
-                                        <ul>
+                                    <li class="subMenu"><a class="child 2" href="#Installation"><span class="numbers"></span>Installation</a>
+                                        <ul class="collapse list-unstyled collapse-6">
                                            <li style="margin-left:20px;"><a class="child 2" href="#SoftwareRequirements"><span class="numbers"></span> <span style="margin-left:5px;">Software Requirements</span></a></li>
                                            <li style="margin-left:20px;"><a class="child 2" href="#HardwareRequirements"><span class="numbers"></span> <span style="margin-left:5px;">Hardware Requirements</span></a></li>
                                            <li style="margin-left:20px;"><a class="child 2" href="#InstallationInstructions"><span class="numbers"></span> <span style="margin-left:5px;">Installation Instructions</span></a></li>
