--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -558,7 +558,7 @@
                                  <li class="subMenu">
                                       <a href="#Techforce"  class="heading"><span class="numbers">3.</span>Techforce.ai Studio Guide</a>
                                       <ul class="collapse list-unstyled collapse-2">
-                                          <li><a class="child 2" href="#Installation"><span class="numbers">3.1</span>Installation</a>
+                                          <li><a class="child 2" href="#Installation"><span class="numbers"></span>Installation</a>
                                               <ul>
                                                  <li style="margin-left:20px;"><a class="child 2" href="#SoftwareRequirements"> <span style="margin-left:5px;">Software Requirements</span></a></li>
                                                  <li style="margin-left:20px;"><a class="child 2" href="#HardwareRequirements"><span style="margin-left:5px;">Hardware Requirements</span></a></li>
@@ -752,32 +752,32 @@
                                   <li>
                                       <a href="#EnterpriseManagerconsole " class="heading"><span class="numbers">4.</span> Enterprise Manager console </a>
                                        <ul class="collapse list-unstyled collapse-3">
-                                          <li><a class="child 3" href="#Registerwith"><span class="numbers">4.1</span> Register with eManager console</a></li>
-                                          <li><a class="child 3" href="#Login"><span class="numbers">4.2</span>Login</a></li>
-                                          <li><a class="child 3" href="#ProcessManagement"><span class="numbers">4.3</span> Process Management</a></li>
-                                          <li><a class="child 3" href="#WorkerManagement"><span class="numbers">4.4</span>Worker Management</a></li>
-                                          <li><a class="child 3" href="#Queues"><span class="numbers">4.5</span> Queues</a></li>
-                                          <li><a class="child 3" href="#SecretVault"><span class="numbers">4.6</span> Secret Vault</a></li>
-                                          <li><a class="child 3" href="#Schedules"><span class="numbers">4.7</span> Schedules</a></li>
-                                          <li><a class="child 3" href="#Organization"><span class="numbers">4.8</span> Organization</a></li>
-                                          <li><a class="child 3" href="#ProfileSettings"><span class="numbers">4.9</span> ProfileSettings</a></li>
-                                          <li><a class="child 3" href="#Notifications"><span class="numbers">4.10</span> Notifications</a></li>
+                                          <li><a class="child 3" href="#Registerwith"><span class="numbers"></span> Register with eManager console</a></li>
+                                          <li><a class="child 3" href="#Login"><span class="numbers"></span>Login</a></li>
+                                          <li><a class="child 3" href="#ProcessManagement"><span class="numbers"></span> Process Management</a></li>
+                                          <li><a class="child 3" href="#WorkerManagement"><span class="numbers"></span>Worker Management</a></li>
+                                          <li><a class="child 3" href="#Queues"><span class="numbers"></span> Queues</a></li>
+                                          <li><a class="child 3" href="#SecretVault"><span class="numbers"></span> Secret Vault</a></li>
+                                          <li><a class="child 3" href="#Schedules"><span class="numbers"></span> Schedules</a></li>
+                                          <li><a class="child 3" href="#Organization"><span class="numbers"></span> Organization</a></li>
+                                          <li><a class="child 3" href="#ProfileSettings"><span class="numbers"></span> ProfileSettings</a></li>
+                                          <li><a class="child 3" href="#Notifications"><span class="numbers"></span> Notifications</a></li>
                                       </ul>
                                   </li>
                                   <li>
                                       <a href="#Worker" class="heading"><span class="numbers">5.</span> Worker </a>
                                       <ul class="collapse list-unstyled collapse-4">
-                                          <li><a class="child  4" href="#RunTimeInstallation"><span class="numbers">5.1</span>RunTime Installation Steps</a>
+                                          <li><a class="child  4" href="#RunTimeInstallation">RunTime Installation Steps</a>
                                                <ul>
-                                                 <li><a class="child  4" href="#Software"><span class="numbers">5.1.1</span>Software Requirements</a></li>
-                                                 <li><a class="child  4" href="#Hardware"><span class="numbers">5.1.2</span>Hardware Requirements</a></li>
-                                                   <li><a class="child  4" href="#Instructions"><span class="numbers">5.1.3</span>Installation Instructions</a></li>
-                                                  <li><a class="child  4" href="#InstallingTechforceOCR2"><span class="numbers">5.1.4</span>Installing TechforceOCR</a></li>
-                                                    <li><a class="child  4" href="#Uninstall"><span class="numbers">5.1.5</span>Uninstall Instructions</a></li>
+                                                 <li><a class="child  4" href="#Software">Software Requirements</a></li>
+                                                 <li><a class="child  4" href="#Hardware">Hardware Requirements</a></li>
+                                                   <li><a class="child  4" href="#Instructions">Installation Instructions</a></li>
+                                                  <li><a class="child  4" href="#InstallingTechforceOCR2">Installing TechforceOCR</a></li>
+                                                    <li><a class="child  4" href="#Uninstall">Uninstall Instructions</a></li>
                                                </ul>
                                           </li>
-                                          <li><a class="child  4" href="#Registeringworker"><span class="numbers">5.2</span>Registering worker with EM console</a></li>
-                                          <li><a class="child  4" href="#TriggeringBots"><span class="numbers">5.3</span>Triggering Bots</a></li>
+                                          <li><a class="child  4" href="#Registeringworker">Registering worker with EM console</a></li>
+                                          <li><a class="child  4" href="#TriggeringBots">Triggering Bots</a></li>
 
                                       </ul>
                                   </li>
@@ -789,11 +789,11 @@
                                    <li>
                                       <a href="Architecture" class="heading"><span class="numbers">7.</span> Architecture & Deployment Models </a>
                                       <ul class="collapse list-unstyled collapse-5">
-                                         <li><a class="child 5" href="#SaaSModel"><span class="numbers">7.1</span>SaaS Model</a></li>
-                                         <li><a class="child 5" href="#HybridModel"><span class="numbers">7.2</span>Hybrid Model</a></li>
-                                         <li><a class="child 5" href="#OnPremise"><span class="numbers">7.3</span>On-Premise Model</a></li>
-                                         <li><a class="child 5" href="DeploymentArchitecture"><span class="numbers">7.</span>Deployment Architecture</a></li>
-                                         <li><a class="child 5" href="#SecurityArchitecture"><span class="numbers">7.4</span>Security Architecture</a></li>
+                                         <li><a class="child 5" href="#SaaSModel">SaaS Model</a></li>
+                                         <li><a class="child 5" href="#HybridModel">Hybrid Model</a></li>
+                                         <li><a class="child 5" href="#OnPremise">On-Premise Model</a></li>
+                                         <!-- <li><a class="child 5" href="DeploymentArchitecture">Deployment Architecture</a></li> -->
+                                         <li><a class="child 5" href="#SecurityArchitecture">Security Architecture</a></li>
                                      </ul>
                                   </li>
                         </ul>
