css changes in docs zcnv

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -559,7 +559,7 @@
                                       <a href="#Techforce"  class="heading"><span class="numbers">3.</span>Techforce.ai Studio Guide</a>
                                       <ul class="collapse list-unstyled collapse-2">
                                           <li><a class="child 2" href="#Installation"><span class="numbers"></span>Installation</a>
-                                              <ul>
+                                              <ul class="collapse list-unstyled collapse-2">
                                                  <li style="margin-left:20px;"><a class="child 2" href="#SoftwareRequirements"> <span style="margin-left:5px;">Software Requirements</span></a></li>
                                                  <li style="margin-left:20px;"><a class="child 2" href="#HardwareRequirements"><span style="margin-left:5px;">Hardware Requirements</span></a></li>
                                                  <li style="margin-left:20px;"><a class="child 2" href="#InstallationInstructions"> <span style="margin-left:5px;">Installation Instructions</span></a></li>
