css in the doc to images

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -569,7 +569,7 @@
                                           </li>
                                           <li><a class="child 2" href="#Building"><span class="numbers"></span> Building a basic bot</a></li>
                                           <li><a class="child 2" href="#Menu"><span class="numbers"></span> Menu Options</a>
-                                              <ul>
+                                              <ul class="collapse list-unstyled collapse-2">
                                                 <li style="margin-left:20px;"><a class="child 2" href="#New"><span class="numbers"></span> <span style="margin-left:5px;">New</span></a></li>
                                                 <li style="margin-left:20px;"><a class="child 2" href="#Open"><span class="numbers"></span> <span style="margin-left:5px;">Open</span></a></li>
                                                 <li style="margin-left:20px;"><a class="child 2" href="#Save"><span class="numbers"></span> <span style="margin-left:5px;">Save</span></a></li>
@@ -744,10 +744,8 @@
                                                           </ul>
                                                          </li>
 
-
-
+                                             </ul>
                                             </li>
-                                     </ul>
                                     </ul></li>
                                   <li>
                                       <a href="#EnterpriseManagerconsole " class="heading"><span class="numbers">4.</span> Enterprise Manager console </a>
