--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -558,7 +558,7 @@
                                  <li class="subMenu">
                                       <a href="#Techforce"  class="heading"><span class="numbers">3.</span>Techforce.ai Studio Guide</a>
                                       <ul class="collapse list-unstyled collapse-2">
-                                          <li><a class="child 2" href="#Installation"><span class="numbers"></span>Installation</a>
+                                          <li class="subMenu"><a class="child 2" href="#Installation"><span class="numbers"></span>Installation</a>
                                               <ul class="collapse list-unstyled collapse-2">
                                                  <li style="margin-left:20px;"><a class="child 2" href="#SoftwareRequirements"> <span style="margin-left:5px;">Software Requirements</span></a></li>
                                                  <li style="margin-left:20px;"><a class="child 2" href="#HardwareRequirements"><span style="margin-left:5px;">Hardware Requirements</span></a></li>
