css and images changes in docs to surya

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -558,7 +558,7 @@
                                  <li class="subMenu">
                                       <a href="#Techforce"  class="heading"><span class="numbers">3.</span>Techforce.ai Studio Guide</a>
                                       <ul class="collapse list-unstyled collapse-2">
-                                          <li class="subMenu2"><a class="child 2" href="#Installation"><span class="numbers"></span>Installation</a>
+                                          <li class="subMenu"><a class="child 2" href="#Installation"><span class="numbers"></span>Installation</a>
                                               <ul class="collapse list-unstyled collapse-6">
                                                  <li style="margin-left:20px;"><a class="child 2" href="#SoftwareRequirements"> <span style="margin-left:5px;">Software Requirements</span></a></li>
                                                  <li style="margin-left:20px;"><a class="child 2" href="#HardwareRequirements"><span style="margin-left:5px;">Hardware Requirements</span></a></li>
@@ -1123,18 +1123,18 @@
                             <li><strong> Programming</strong></li>
                             <p>Programming Action comprises String and Technology Sub-Actions. Using String Sub-Action, the user can perform string operations and match case operations. By using Programming Sub-Action, the user can include programming languages like JavaScript, Python, R and Auto Hotkey scripting, available to automate.</p>
                             <img src="{{ '/assets/images/doc-img37.png' | relative_url }}" alt="image" style=" width:300px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
-                            <p style="text-align:center;"><strong>Figure 23: File Tab</strong></p>
+                            <p style="text-align:center;"><strong>Figure 22: Programming</strong></p>
 
                             <li><strong> Mail Integration</strong></li>
                             <p>Mail Integration is used to automate mail operations to configure Read Mail, Send Mail and Save Attachments using Sub-Actions: IMAP, POP3, OutLook2016 and Save Attachments.</p>
                             <img src="{{ '/assets/images/doc-img38.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
-                            <p style="text-align:center;"><strong>Figure 24: Mail Integration</strong></p>
+                            <p style="text-align:center;"><strong>Figure 23: Mail Integration</strong></p>
 
                             <li><strong> Database</strong></li>
                             <p>The Database is used to connect to the database like MYSQL and PostgreSQL. The data from can be retrieved and stored into desktop applications. Similarly, the data can be sent to the database from the desktop applications. All the queries executed in the database can be executed using database actions.</p>
 
                             <img src="{{ '/assets/images/doc-img39.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
-                            <p style="text-align:center;"><strong>Figure 25: Database</strong></p>
+                            <p style="text-align:center;"><strong>Figure 24: Database</strong></p>
                           </div>
 
                           <div id="Stage"  class="page-section">
