css changes in surya and doc to sai

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -558,12 +558,12 @@
                                  <li class="subMenu">
                                       <a href="#Techforce"  class="heading"><span class="numbers">3.</span>Techforce.ai Studio Guide</a>
                                       <ul class="collapse list-unstyled collapse-2">
-                                          <li class="subMenu"><a class="heading" href="#Installation"><span class="numbers"></span>Installation</a>
+                                          <li ><a class="heading" href="#Installation">Installation</a>
                                               <ul class="collapse list-unstyled collapse-6">
-                                                 <li style="margin-left:20px;"><a class="child 6" href="#SoftwareRequirements"> <span style="margin-left:5px;">Software Requirements</span></a></li>
-                                                 <li style="margin-left:20px;"><a class="child 6" href="#HardwareRequirements"><span style="margin-left:5px;">Hardware Requirements</span></a></li>
-                                                 <li style="margin-left:20px;"><a class="child 6" href="#InstallationInstructions"> <span style="margin-left:5px;">Installation Instructions</span></a></li>
-                                                 <li style="margin-left:20px;"><a class="child 6" href="#InstallingTechforceOCR"> <span style="margin-left:5px;">Installing Techforce OCR</span></a></li>
+                                                 <li style="margin-left:20px;"><a class="child 6" href="#SoftwareRequirements"> Software Requirements</span></a></li>
+                                                 <li style="margin-left:20px;"><a class="child 6" href="#HardwareRequirements">Hardware Requirements</span></a></li>
+                                                 <li style="margin-left:20px;"><a class="child 6" href="#InstallationInstructions"> Installation Instructions</span></a></li>
+                                                 <li style="margin-left:20px;"><a class="child 6" href="#InstallingTechforceOCR"> Installing Techforce OCR</span></a></li>
                                                  <li style="margin-left:20px;"><a class="child 6" href="#Un-installInstructions"> Un-install Instructions</a></li>
                                               </ul>
                                           </li>
