css changes in ul and li

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -557,8 +557,8 @@
                                   </li>
                                  <li class="subMenu">
                                       <a href="#Techforce"  class="heading"><span class="numbers">3.</span>Techforce.ai Studio Guide</a>
-                                      <ul class="collapse list-unstyled collapse-2">
-                                          <li ><a class="heading" href="#Installation">Installation</a>
+                                      <ul class="collapse list-unstyled collapse-2"></ul>
+                                          <li><a class="heading" href="#Installation">Installation</a>
                                               <ul class="collapse list-unstyled collapse-6">
                                                  <li style="margin-left:20px;"><a class="child 6" href="#SoftwareRequirements"> Software Requirements</span></a></li>
                                                  <li style="margin-left:20px;"><a class="child 6" href="#HardwareRequirements">Hardware Requirements</span></a></li>
