--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -557,8 +557,8 @@
                                   </li>
                                  <li class="subMenu">
                                       <a href="#Techforce"  class="heading"><span class="numbers">3.</span>Techforce.ai Studio Guide</a>
-                                      <ul class="collapse list-unstyled collapse-2"></ul>
-                                          <li><a class="heading" href="#Installation">Installation</a>
+                                      <ul class="collapse list-unstyled collapse-2">
+                                          <li><a class="subhead" href="#Installation">Installation</a>
                                               <ul class="collapse list-unstyled collapse-6">
                                                  <li style="margin-left:20px;"><a class="child 6" href="#SoftwareRequirements"> Software Requirements</span></a></li>
                                                  <li style="margin-left:20px;"><a class="child 6" href="#HardwareRequirements">Hardware Requirements</span></a></li>
@@ -2859,6 +2859,36 @@ $(".child").click(function(){
 
 });
 $(".heading").click(function(){
+   $(this).toggleClass('active').siblings().removeClass('active');
+   var n = $(this).parent().children()[1]
+   if($(n).css("display") == "none"){
+    $(open_menu_item).slideToggle()
+        open_menu_item = n
+        $(n).slideToggle()
+
+   }else {
+        $(n).slideToggle()
+        open_menu_item = undefined
+   }
+});
+
+$(".giveRate li").click(function(){
+  $(this).toggleClass('given');
+})
+
+var dropdown2 = document.getElementsByClassName("subhead");
+
+$(".child").click(function(){
+ var index = Number($(this).attr("class").split(/\s+/)[1]);
+  $(this).parents().find('.subhead').not(this).removeClass('active');
+  $(".subhead").removeClass('active');
+  $(".collapse").css("display", "none");
+    var x = $(this).parents().find('.subhead')
+    $(x[index]).toggleClass('active');
+    $(".collapse-"+ index).css("display", "block");
+
+});
+$(".subhead").click(function(){
    $(this).toggleClass('active').siblings().removeClass('active');
    var n = $(this).parent().children()[1]
    if($(n).css("display") == "none"){
