css to surya and sai

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2448,7 +2448,7 @@
                         </div>
 
                           <div id="Worker"  class="page-section">
-                            <h3><span class="numbers">5.</span> Worker</h3>
+                            <h3><span class="numbers">5.</span> EWorker Machine</h3>
                           </div>
 
                            <div id="RuntimeInstallation"  class="page-section">
